fixed ios7 cropper/preview pic

--- a/css/style.css
+++ b/css/style.css
@@ -563,6 +563,14 @@ padding:5% 5%;
 	margin-top:6%;
 	margin-left:3%;
 }
+.content-movie-img_crossPlatform{
+    position:absolute;
+	top: 5%;
+    bottom: 0;
+
+	width:95%;
+		margin-left:3%;
+}
 .content-movie-img-long{
     position:absolute;
 	top: 0;
@@ -674,6 +682,7 @@ padding:5% 5%;
 	font-family:"kaiu";
     text-shadow: none;
 	color: #dcd586;
+   // top:67%;
 	}
 
 .button_text_phone_num_input{
